fix character spacing issue #2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1544,6 +1544,7 @@ textarea {
 	position: relative;
 	display: flex;
 	align-items: center;
+	gap: 0.5rem;
 }
 .shell::before {
 	content: "$";
